# zk-age-verification-protocol

./: .env.example  .gitignore  README.md  package-lock.json  package.json
backend/: issued-credentials.json  package.json  tsconfig.json
backend/src/: credential.ts  did.ts  issuer.ts  server.ts  types.ts
backend/test/: credential.test.ts  did-issuer.test.ts
circuits/: age_check.circom
circuits/scripts/: compile.sh  generate_test_proof.ts  setup.sh
contracts/: hardhat.config.js  package.json  tsconfig.json
contracts/contracts/: AgeRegistry.sol  AgeVerifier.sol  CommitmentRegistry.sol  IAgeVerifier.sol  IssuerRegistry.sol  MockAgeVerifier.sol  RejectingAgeVerifier.sol
contracts/scripts/: deploy.js  deploy.ts
contracts/test/: AgeRegistry.test.js
docs/screenshots/: architecture-diagram.mmd  capture-demo.mjs
frontend/: index.html  package.json  vite.config.ts
frontend/public/circuits/age_check_js/: age_check.wasm
frontend/src/: api-client.ts  main.ts  prover.ts  wallet.ts
prover/: Cargo.toml
prover/.cargo/: config.toml
prover/src/: api.rs  circuit.rs  main.rs  prover.rs
